pod_2.yml
kind: Pod
apiVersion: v1
metadata:
  name: apache-app
  labels:
    app: apache
spec:
 replicas: 2
 selector:
  matchLabels:
   app: apache
 template:
  metadata:
   labels:
    app: apache
spec:
  containers:
    - name: apache-app
      image: apache

---

kind: Service
apiVersion: v1
metadata:
  name: apache-service
spec:
  selector:
    app: apache
  ports:
    - port: 80 # Default port for image
