samplepod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: mydeployment
spec:
 strategy:
   type: RollingUpdate
 replicas: 2
 selector:
   matchLabels:
     env: prod     
 template:
   metadata:
     name: mypod
     labels:
       env: prod
   spec:
    containers:
    - name: mycontainer
      image: apache
      ports:
      - containerPort: 80
---

apiVersion: v1
kind: Service
metadata:
 name: app-service
spec:
 type: NodePort
 ports:
   - port: 80 # port of cluster IP
     targetPort: 80  # container Port
     nodePort: 30000 # Node Port
 selector:
   env: prod
